# scaf

./: .env.example  .gitignore  .venvrc  CLAUDE.md  MANIFEST.in  README.md  call  pyproject.toml  todo.bug-template.md  todo.md
.claude/: settings.local.json
.claude/skills/add-scaf-action/: SKILL.md
.github/workflows/: publish.yml  release.yml
dev/: entity.py  env.sh
dev/bump_version/: command.py  handler.py
dev/check/do_tests_pass/: handler.py  query.py
dev/check/is_code_formatted/: handler.py  query.py
dev/check/is_git_hook_updated/: handler.py  query.py
dev/check/is_version_bump_needed/: handler.py  query.py
dev/check/is_version_bumped/: handler.py  query.py
dev/check/is_working_dir_clean/: handler.py  query.py
dev/check_hook/: handler.py  query.py
dev/publish/: command.py  handler.py
dev/tag_release/: command.py  handler.py
dev/test/: command.py  handler.py
docs/: copilot-instructions.md
docs/instructions/: protobuf.instructions.md  python.instructions.md
docs/skills/api-design/: SKILL.md
docs/skills/domain-driven-design/: SKILL.md
docs/skills/domain-modeling/: SKILL.md
example/custom_union_types/: command.py  entity.py  handler.py
example/hole/insert_peg/: command.py  conftest.py  handler.py  rules.py  test_fixtures.py
example/myriad/: entity.py
example/myriad/get/: command.py  handler.py
example/not_an_action/: __init__.py
example/pass_dynamic_args/: command.py  handler.py
example/shape/: entity.py  rules.py
example/test_custom_union_types/: command.py  entity.py  handler.py
example/test_timestamp_handling/: command.py  handler.py
example/tests/: test_bug_202601270041.py
example/thing/: entity.py
hooks/: pre-push
scaf/: __init__.py  __main__.py  cli.py  errors.py  output.py  rules.py  tools.py
scaf/action/call/: command.py  handler.py
scaf/action_package/: entity.py  rules.py
scaf/alias/: entity.py  tools.py
scaf/config/: __init__.py
scaf/config/settings/: tools.py
scaf/core/: __init__.py  rules.py
scaf/deck/: entity.py  rules.py  settings.py
scaf/shape/: base.py
scaf/tests/: test_cli.py  test_tools.py
test/: conftest.py  sandbox.py
test/alias/: entity.py
test/integration/: conftest.py
(+92 files in other folders)
